Travel::Status::DE::IRIS 1.73 - Mon Oct 03 2022

    * Result: Add arrival_hidden and departure_hidden accessors

Travel::Status::DE::IRIS 1.72 - Mon Oct 03 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.71 - Sun Oct 02 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.70 - Sat Sep 03 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.69 - Tue Aug 02 2022

    * Repair Travel::Status::DE::IRIS::Stations module
      (broken in Release 1.68)

Travel::Status::DE::IRIS 1.68 - Mon Aug 01 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.67 - Tue Jul 26 2022

    * IRIS->new_p: Fix bug in related_stations accessor
    * Update IRIS station list

Travel::Status::DE::IRIS 1.66 - Sun Jun 26 2022

    * Treat Essen-Dellwig and Essen-Dellwig Ost as separate stations.
      Although they are grouped in the IRIS backend, they are distinct
      stations. Both have platforms 1 & 2, so grouping them leads to confusion.
    * Update IRIS station list

Travel::Status::DE::IRIS 1.65 - Sun Apr 03 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.64 - Sun Jan 30 2022

    * Add experimental "new_p" constructor for non-blocking operation with
      Mojo::Promise and Mojo::UserAgent.

Travel::Status::DE::IRIS 1.63 - Mon Jan 24 2022

    * update station database

Travel::Status::DE::IRIS 1.62 - Sun Dec 12 2021

    * import station name changes and removals from Winterfahrplan 2022

Travel::Status::DE::IRIS 1.61 - Sat Oct 23 2021

    * Switch to GIS::Distance(::Fast), as Geo::Distance is deprecated and
      Geo::Distance::XS is no longer available

Travel::Status::DE::IRIS 1.60 - Sun Sep 12 2021

    * Update IRIS station list; remove stations which no longer receive train
      services

Travel::Status::DE::IRIS 1.59 - Sat Aug 14 2021

    * Stations: get_station, get_station_by_name: Return immediately if
      requested station is undef or empty